# cm-launcher-rs

./: README.md  biome.json  index.html  package-lock.json  package.json  rich-presence-localisation.vdf
.github/actions/steam-deploy/: action.yml
.github/workflows/: build.yml  ci.yml  steam.yml
src/: App.css  App.tsx  constants.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.steam.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: byond.rs  control_server.rs  lib.rs  logging.rs  main.rs  settings.rs  webview2.rs  wine.rs
src-tauri/src/auth/: client.rs  commands.rs  server.rs  storage.rs
src-tauri/src/discord/: mod.rs  presence.rs
src-tauri/src/presence/: manager.rs  mod.rs  status.rs  traits.rs
src-tauri/src/steam/: commands.rs  mod.rs  presence.rs  state.rs
src/components/: AccountInfo.tsx  AuthModal.tsx  ErrorNotifications.tsx  GameConnectionModal.tsx  Modal.tsx  RelayDropdown.tsx  ServerItem.tsx  SettingsModal.tsx  SteamAuthModal.tsx  Titlebar.tsx  WineSetupModal.tsx  index.ts
src/hooks/: index.ts  useAuth.ts  useConnect.ts  useError.tsx  useGameConnection.ts  useRelays.ts  useServers.ts  useSettings.ts  useSteamAuth.ts
src/stores/: appStore.ts  authStore.ts  index.ts  serverStore.ts  settingsStore.ts  steamStore.ts
src/styles/: base.scss  variables.scss
src/utils/: format.ts  index.ts  ping.ts
tools/: get_steamworks.py  release.sh
