[package]
name = "CM_Launcher"
version = "0.5.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
steam = ["steamworks"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cm_launcher_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2"
tokio = { version = "1", features = ["full", "sync"] }
oauth2 = "5"
tiny_http = "0.12"
aes-gcm = "0.10"
rand = "0.8"
dirs = "5"
open = "5"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
steamworks = { version = "0.12", optional = true }
hex = "0.4"
discord-sdk = "0.4.0"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }
